<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>online_fgo</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="h.zhang@irt.rwth-aachen.de">haoming.zhang</maintainer>
  <license>apache2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>cv_bridge</depend>
  <depend>yaml_cpp_vendor</depend>
  <depend>message_filters</depend>
  <depend>rosidl_default_generators</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>irt_nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>rmw</depend>
  <depend>rmw_implementation_cmake</depend>
  <depend>rmw_implementation</depend>
  <depend>lio_sam</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>OpenCV</depend>
  <depend>PCL</depend>
  <depend>ublox_msgs</depend>
  <depend>novatel_oem7_msgs</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rosbag2_storage_default_plugins</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <online_fgo plugin="${prefix}/integrator_ros_plugins.xml"/>
  </export>
</package>
